# internal/file/file.handler.go
@@ -4,7 +4,7 @@ import (
 	"net/http"
 	"strings"
 
-	"github.com/bookpanda/minio-api/errors"
+	"github.com/bookpanda/minio-api/apperrors"
 	"github.com/bookpanda/minio-api/internal/dto"
 	"github.com/bookpanda/minio-api/internal/model"
 	"github.com/bookpanda/minio-api/internal/router"
@@ -38,27 +38,28 @@ func NewHandler(svc Service, validate validator.DtoValidator, maxFileSize int64,
 
 // Upload godoc
 // @Summary      Upload object to minio
-// @Description  get string by ID
+// @Description  specify the bucket and file to upload
 // @Tags         file
 // @Accept       mpfd
 // @Produce      json
 // @Param        bucket formData string true "Which bucket to upload to"
 // @Param        file formData file true "file to upload"
+// @Security     BearerAuth
 // @Success      200  {object}  dto.UploadFileResponse
-// @Failure      400  {object}  errors.AppError
-// @Failure      401  {object}  errors.AppError
-// @Failure      500  {object}  errors.AppError
-// @Router       /api/v1/upload [post]
+// @Failure      400  {object}  apperrors.AppError
+// @Failure      401  {object}  apperrors.AppError
+// @Failure      500  {object}  apperrors.AppError
+// @Router       /file/upload [post]
 func (h *handlerImpl) Upload(c router.Context) {
 	bucket := c.PostForm("bucket")
 	if bucket == "" {
-		c.ResponseError(errors.BadRequestError("bucket is required"))
+		c.ResponseError(apperrors.BadRequestError("bucket is required"))
 		return
 	}
 
 	file, err := c.FormFile("file", h.allowedContentType, h.maxFileSize)
 	if err != nil {
-		c.ResponseError(errors.BadRequestError(err.Error()))
+		c.ResponseError(apperrors.BadRequestError(err.Error()))
 		return
 	}
 
@@ -71,25 +72,39 @@ func (h *handlerImpl) Upload(c router.Context) {
 		},
 	}
 
-	res, err := h.svc.Upload(req)
-	if err != nil {
-		c.ResponseError(errors.InternalServerError(err.Error()))
+	res, apperr := h.svc.Upload(req)
+	if apperr != nil {
+		c.ResponseError(apperr)
 		return
 	}
 
 	c.JSON(http.StatusOK, res)
 }
 
+// Get godoc
+// @Summary      Get object url from minio
+// @Description  specify the bucket and object key to get
+// @Tags         file
+// @Accept       plain
+// @Produce      json
+// @Param        bucket path string true "Which bucket to get object from"
+// @Param        key query string true "object key to get"
+// @Security     BearerAuth
+// @Success      200  {object}  dto.GetFileResponse
+// @Failure      400  {object}  apperrors.AppError
+// @Failure      401  {object}  apperrors.AppError
+// @Failure      500  {object}  apperrors.AppError
+// @Router       /file/get/{bucket} [get]
 func (h *handlerImpl) Get(c router.Context) {
 	bucket := c.Param("bucket")
 	if bucket == "" {
-		c.ResponseError(errors.BadRequestError("bucket route parameter is required"))
+		c.ResponseError(apperrors.BadRequestError("bucket route parameter is required"))
 		return
 	}
 
 	objectKey := c.Query("key")
 	if objectKey == "" {
-		c.ResponseError(errors.BadRequestError("key query parameter is required"))
+		c.ResponseError(apperrors.BadRequestError("key query parameter is required"))
 		return
 	}
 
@@ -98,9 +113,9 @@ func (h *handlerImpl) Get(c router.Context) {
 		FileKey: objectKey,
 	}
 
-	res, err := h.svc.Get(req)
-	if err != nil {
-		c.ResponseError(errors.InternalServerError(err.Error()))
+	res, apperr := h.svc.Get(req)
+	if apperr != nil {
+		c.ResponseError(apperr)
 		return
 	}
 
@@ -110,18 +125,18 @@ func (h *handlerImpl) Get(c router.Context) {
 func (h *handlerImpl) Delete(c router.Context) {
 	bucket := c.Param("bucket")
 	if bucket == "" {
-		c.ResponseError(errors.BadRequestError("bucket route parameter is required"))
+		c.ResponseError(apperrors.BadRequestError("bucket route parameter is required"))
 		return
 	}
 
 	body := &dto.DeleteFileRequestBody{}
 	if err := c.Bind(body); err != nil {
-		c.ResponseError(errors.BadRequestError(err.Error()))
+		c.ResponseError(apperrors.BadRequestError(err.Error()))
 		return
 	}
 
 	if errorList := h.validate.Validate(body); errorList != nil {
-		c.ResponseError(errors.BadRequestError(strings.Join(errorList, ", ")))
+		c.ResponseError(apperrors.BadRequestError(strings.Join(errorList, ", ")))
 		return
 	}
 
@@ -130,9 +145,9 @@ func (h *handlerImpl) Delete(c router.Context) {
 		FileKey: body.FileKey,
 	}
 
-	res, err := h.svc.Delete(req)
-	if err != nil {
-		c.ResponseError(errors.InternalServerError(err.Error()))
+	res, apperr := h.svc.Delete(req)
+	if apperr != nil {
+		c.ResponseError(apperr)
 		return
 	}
 
